fixes git repo addresses

--- a/pipeline/argocd/app-of-apps-prd.yaml
+++ b/pipeline/argocd/app-of-apps-prd.yaml
@@ -12,7 +12,7 @@ spec:
   project: project-prd
   source:
     path: ./app-of-apps/prd
-    repoURL: https://github.com/Kuberise/kuberise.git
+    repoURL: https://github.com/mojtabaimani/sodeko-green-platform.git
     targetRevision: HEAD
   syncPolicy:
     automated:
