--- a/pipeline/argocd/app-of-apps-acc.yaml
+++ b/pipeline/argocd/app-of-apps-acc.yaml
@@ -12,7 +12,7 @@ spec:
   project: project-acc
   source:
     path: ./app-of-apps/acc
-    repoURL: https://github.com/Kuberise/kuberise.git
+    repoURL: https://github.com/mojtabaimani/sodeko-green-platform.git
     targetRevision: HEAD
   syncPolicy:
     automated:
