--- a/app-of-apps/acc/sealed-secrets.yaml
+++ b/app-of-apps/acc/sealed-secrets.yaml
@@ -9,7 +9,7 @@ spec:
   project: project-acc
   sources:
   - repoURL: https://github.com/mojtabaimani/sodeko-platform-tools.git
-    path: tools/ingress-nginx
+    path: tools/sealed-secrets
     targetRevision: 0.0.1
     helm:
       releaseName: sealed-secrets
