adds two new apps for green

--- a/app-of-apps/acc/hello.yaml
+++ b/app-of-apps/acc/hello.yaml
@@ -1,23 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx
+  name: hello
   namespace: green-acc
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   project: green-acc
   sources:
-  - repoURL: https://github.com/mojtabaimani/sodeko-platform-tools.git
-    path: tools/nginx
-    targetRevision: HEAD
-    helm:
-      releaseName: nginx
-      valueFiles:
-        - $values/app-values/nginx/nginx-values-acc.yaml
   - repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
+    path: green-services/hello
     targetRevision: HEAD
-    ref: values
   destination:
     server: https://kubernetes.default.svc
     namespace: green-acc
