--- a/pipeline/argocd/app-of-apps-acc.yaml
+++ b/pipeline/argocd/app-of-apps-acc.yaml
@@ -2,17 +2,17 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: app-of-apps-acc
-  namespace: argocd
+  namespace: green-acc
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: green-acc
     server: https://kubernetes.default.svc
   project: project-acc
   source:
     path: ./app-of-apps/acc
-    repoURL: https://github.com/mojtabaimani/sodeko-green-platform.git
+    repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
     targetRevision: HEAD
   syncPolicy:
     automated:
