--- a/pipeline/argocd/project-green-tst.yaml
+++ b/pipeline/argocd/project-green-tst.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: green-tst
-  namespace: green-tst
+  namespace: argocd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
