--- a/app-of-apps/prd/ingress-nginx.yaml
+++ b/app-of-apps/prd/ingress-nginx.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: nginx
-  namespace: green-prd
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
