fix the urf of ingress

--- a/green-services/hello/ingress.yaml
+++ b/green-services/hello/ingress.yaml
@@ -13,29 +13,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: web
-                namespace: green-prd
-                port:
-                  number: 8080
-    - host: tst.hello-world.info
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: web
-                namespace: green-tst
-                port:
-                  number: 8080
-    - host: acc.hello-world.info
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: web
-                namespace: green-acc
+                name: green-prd/web
                 port:
                   number: 8080
