--- a/green-services/hello/ingress.yaml
+++ b/green-services/hello/ingress.yaml
@@ -1,7 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: example-ingress
+  name: web-ingress
+  namespace: green-prd
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
@@ -13,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: green-prd/web
+                name: web
                 port:
                   number: 8080
