--- a/app-of-apps/prd/nginx.yaml
+++ b/app-of-apps/prd/nginx.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx
+  name: nginx-prd
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
