hello name changed

--- a/green-services/hello/hello-deployment.yaml
+++ b/green-services/hello/hello-deployment.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: web
-  name: web
+    app: hello
+  name: hello
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: web
+      app: hello
   template:
     metadata:
       labels:
-        app: web
+        app: hello
     spec:
       containers:
       - image: gcr.io/google-samples/hello-app:1.0
