--- a/green-services/hello/hello-service.yaml
+++ b/green-services/hello/hello-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: web
-  name: web
+    app: hello
+  name: hello
 spec:
   ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
   selector:
-    app: web
+    app: hello
   type: NodePort
