adds db secrets

--- a/app-of-apps/prd/secrets.yaml
+++ b/app-of-apps/prd/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-prd
+  name: secrets-prd
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -9,7 +9,7 @@ spec:
   project: green-prd
   sources:
   - repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
-    path: green-services/hello
+    path: green-services/secrets
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
