--- a/app-of-apps/tst/secrets.yaml
+++ b/app-of-apps/tst/secrets.yaml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-prd
+  name: secrets-tst
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: green-prd
+  project: green-tst
   sources:
   - repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
-    path: green-services/hello
+    path: green-services/secrets
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: green-prd
+    namespace: green-tst
   syncPolicy:
     automated:
       prune: true
