--- a/app-of-apps/acc/secrets.yaml
+++ b/app-of-apps/acc/secrets.yaml
@@ -9,7 +9,7 @@ spec:
   project: green-acc
   sources:
   - repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
-    path: green-services/secrets
+    path: green-services/secrets/acc
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
