--- a/app-of-apps/acc/hello.yaml
+++ b/app-of-apps/acc/hello.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-acc
+  name: hello-green-acc
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
