--- a/app-of-apps/prd/hello.yaml
+++ b/app-of-apps/prd/hello.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-prd
+  name: hello-green-prd
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
