--- a/app-of-apps/tst/secrets.yaml
+++ b/app-of-apps/tst/secrets.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
+  labels:
+    team: green
 spec:
   project: green-tst
   sources:
