--- a/pipeline/argocd/app-of-apps-green-acc.yaml
+++ b/pipeline/argocd/app-of-apps-green-acc.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
+  labels:
+    team: green
 spec:
   destination:
     namespace: argocd
