helm chart for app of apps

--- a/pipeline/argocd/app-of-apps-green-acc.yaml
+++ b/pipeline/argocd/app-of-apps-green-acc.yaml
@@ -13,9 +13,12 @@ spec:
     server: https://kubernetes.default.svc
   project: green-acc
   source:
-    path: ./app-of-apps/acc
+    path: ./app-of-apps
     repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
     targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values-acc.yaml
   syncPolicy:
     automated:
       prune: true
