--- a/pipeline/argocd/app-of-apps-green-prd.yaml
+++ b/pipeline/argocd/app-of-apps-green-prd.yaml
@@ -13,9 +13,12 @@ spec:
     server: https://kubernetes.default.svc
   project: green-prd
   source:
-    path: ./app-of-apps/prd
+    path: ./app-of-apps
     repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
     targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values-prd.yaml
   syncPolicy:
     automated:
       prune: true
