--- a/pipeline/argocd/app-of-apps-green-tst.yaml
+++ b/pipeline/argocd/app-of-apps-green-tst.yaml
@@ -13,9 +13,12 @@ spec:
     server: https://kubernetes.default.svc
   project: green-tst
   source:
-    path: ./app-of-apps/tst
+    path: ./app-of-apps
     repoURL: https://github.com/mojtabaimani/sodeko-green-services.git
     targetRevision: HEAD
+    helm:
+      valueFiles:
+        - values-tst.yaml
   syncPolicy:
     automated:
       prune: true
