fixes nginx values

--- a/app-of-apps/templates/applications.yaml
+++ b/app-of-apps/templates/applications.yaml
@@ -11,14 +11,17 @@ metadata:
     team: green
 spec:
   project: {{ $.Values.global.spec.project }}
-  source:
-    repoURL:  {{ default $.Values.global.spec.source.repoURL .repoURL }}
+  sources:
+  - repoURL:  {{ default $.Values.global.spec.source.repoURL .repoURL }}
     targetRevision: {{ default $.Values.global.spec.source.targetRevision .targetRevision }}
     path: {{ .path }}
     {{- if default $.Values.global.helmDefault .helm }}
     helm:
       valueFiles:
       - {{ default $.Values.global.valuesFile .valuesFile }}
+  - repoURL: {{ default $.Values.global.spec.source.repoURL .repoURL }}
+    targetRevision: {{ default $.Values.global.spec.source.targetRevision .targetRevision }}
+    ref: values
     {{- end }}
   destination:
     namespace: {{ default $.Values.global.spec.destination.namespace .namespace }}
